<resources>
    <string name="app_name">SFTraining</string>
    <string name="version_code">1.0</string>

    <string name="action_favorite">Favorite</string>
    <string name="action_search">Search exercises</string>
    <string name="action_settings">Settings</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="select_part_of_the_body">Select part of the body</string>
    <string name="neck">Neck</string>
    <string name="shoulders">Shoulders</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="forearm">Forearm</string>
    <string name="fingers">Fingers</string>
    <string name="back">Back</string>
    <string name="chest">Chest</string>
    <string name="abs">Abs</string>
    <string name="legs">Legs</string>
    <string name="select_training_time">Select training time, min</string>
    <string name="select_your_level">Select your level</string>
    <string name="training_type">Training type</string>
    <string name="cardio">Cardio</string>
    <string name="power">Power</string>
    <string name="stretching">Stretching</string>
    <string name="endurance">Endurance</string>
    <string name="statics">Statics</string>
    <string name="dynamics">Dynamics</string>
    <string name="your_weight">Your weight</string>
    <string name="weights">Weights</string>
    <string name="end_it">End it!</string>
    <string name="main_part">Main part</string>
    <string name="start_with">Start with</string>
    <string name="youtube_video">Youtube video</string>
    <string name="apply_filters">Apply filters</string>
    <string name="action_filters">Filters</string>
    <string name="write_exercise_name">Write exercise name</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="trainings">Trainings</string>
    <string name="profile">Profile</string>
    <string name="next">next</string>
    <string name="start">start</string>
    <string name="prev">prev</string>
    <string name="def_uri">https</string>
    <string name="finish">finish</string>

    <string name="dialog_without_register">
        When you exit the temporary account, your data is not saved
    </string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="send">Send</string>
    <string name="reset_pass">Reset password</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="sign_in_with_facebook">sign in with facebook</string>
    <string name="choose_your_path_consciously">Choose \nyour path \nconsciously</string>
    <string name="incorrect_email">Incorrect Email</string>
    <string name="msg_sending">Message sending</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="empty_field">Empty field</string>
    <string name="register_failed">Registration failed</string>
    <string name="auth_failed">Auth failed</string>
    <string name="favorite_exercises">Favorite exercises</string>
    <string name="create_an_account">Create an account</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="or">or</string>
    <string name="write_title_here">Write title here</string>
    <string name="content">content</string>
    <string name="registration">Registration</string>
    <string name="exit_from_account">Exit from account</string>
    <string name="help">Help</string>
    <string name="support">Support</string>
    <string name="theme">Theme</string>
    <string name="setting_theme">setting_theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="language">Language</string>
    <string name="setting_language">setting_language</string>
    <string name="language_en">English</string>
    <string name="language_ru">Russian</string>
    <string name="notifications">Notifications</string>
    <string name="sound">Sound</string>
    <string name="memory">Memory</string>
    <string name="version">Version</string>
    <string name="not_full_account">Your account is not full. If you exit it your data will not be saved</string>
    <string name="migrate_to_full_account">Migrate to full account</string>
    <string name="photo">Photo</string>
    <string name="add_personal_information">Personal information</string>
    <string name="all_exercises">All exercises</string>
    <string name="you_personal_information">You personal information:</string>
    <string name="private_exer">Private</string>
    <string name="your_tag">Your tag</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="add_trainer_verification_docs">Add trainer verification docs</string>
    <string name="show_more">Show more</string>
    <string name="what_do_you_think">What do you think?</string>
    <string name="title">Title</string>
    <string name="create_exer">create exer</string>


    <string-array name="sports">
        <item>Select sport</item>
        <item>Climbing</item>
        <item>Bodybuilding</item>
        <item>Running</item>
        <item>Workout</item>
        <item>Calisthenic</item>
        <item>Basketball</item>
        <item>Ice Climbing</item>
        <item>Football</item>
    </string-array>

</resources>
