<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.create_exer.ChooseFilterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/cf_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/cf_collapsing_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cf_title_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/cf_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                android:background="@drawable/background_edit_text"
                app:contentInsetEnd="0dp"
                app:contentInsetEndWithActions="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cf_title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/colorTransparent"
                    android:hint="@string/title"
                    android:imeActionLabel="Done"
                    android:imeOptions="actionDone"
                    android:inputType="text|textCapSentences"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlackHint"
                    android:textSize="24sp" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintEnd_toEndOf="parent">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sports_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:entries="@array/sports"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/select_your_level"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sports_spinner" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/group_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_easy"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_normal"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_hard"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hard" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/select_part_of_the_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_level" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/group_muscles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_neck"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/neck" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_shoulders"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoulders" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_biceps"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biceps" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_triceps"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/triceps" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_forearm"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forearm" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_fingers"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fingers" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_back"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_chest"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chest" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_abs"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abs" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheap_legs"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legs" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/select_training_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_muscles" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/time_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:stepSize="5"
                android:valueFrom="10"
                android:valueTo="60"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/training_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_slider" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/group_training_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_cardio"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardio" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_power"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_stretching"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stretching" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_endurance"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/endurance" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_statics"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statics" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_dynamics"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dynamics" />
            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/group_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_training_type">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_your_weight"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_weight" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_weights"
                    style="@style/MyChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weights" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                style="@style/MyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="4dp"
                android:text="@string/create_exer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/group_weight" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout >